Added synchronization of items with remote servers.